vendor/mujoco_osx/mujoco.h




//---------------------- Access to XML parser and C++ compiler --------------------------

// parse XML file in MJCF or URDF format, compile it, return low-level model
MJAPI mjModel* mj_loadXML(const char* filename, char* error);


// advance simulation: use control callback, no external force, RK4 available
MJAPI void mj_step(const mjModel* m, mjData* d);


// forward dynamics
MJAPI void mj_forward(const mjModel* m, mjData* d);


// inverse dynamics
MJAPI void mj_inverse(const mjModel* m, mjData* d);


// de-allocate model
MJAPI void mj_deleteModel(mjModel* m);


// allocate mjData correponding to given model
MJAPI mjData* mj_makeData(const mjModel* m);


// de-allocate data
MJAPI void mj_deleteData(mjData* d);



//---------------------- Asbtract visualization: 3D --------------------------------------

// init visualization objects, allocate buffers
MJAPI void mjv_makeObjects(mjvObjects* obj, int maxgeom);


// free visualization objects
MJAPI void mjv_freeObjects(mjvObjects* obj);


// set default visualization options
MJAPI void mjv_defaultOption(mjvOption* vopt);


// set default camera
MJAPI void mjv_defaultCamera(mjvCamera* cam);


// set high-level camera info, or pose for fixed camera
MJAPI void mjv_setCamera(const mjModel* m, const mjData* d, mjvCamera* cam);


// update camera pose given high-level info
MJAPI void mjv_updateCameraPose(mjvCamera* cam, mjtNum aspect);


// convert 3D vector to z-aligned world coordinates
MJAPI void mjv_convert3D(mjtNum* res, const mjtNum* vec,
                         mjtNum scale, const mjvCameraPose* campose);


// convert 2D mouse motion to z-aligned 3D world coordinates
MJAPI void mjv_convert2D(mjtNum* res, mjtMouse mode, mjtNum dx, mjtNum dy,
                         mjtNum scale, const mjvCameraPose* campose);


// move camera
MJAPI void mjv_moveCamera(mjtMouse action, float dx, float dy, mjvCamera* cam, 
                          float width, float height);


// translate or rotate object
MJAPI void mjv_moveObject(mjtMouse action, float dx, float dy, const mjvCameraPose* campose,
                          float width, float height, mjtNum* pos, mjtNum* quat);


// compute mouse perturbation: result = (3D force, 3D torque)
MJAPI void mjv_mousePerturb(const mjModel* m, mjData* d, int select, int perturb, 
                            const mjtNum* refpos, const mjtNum* refquat, mjtNum* result);


// move selected subtree or fixed body
MJAPI void mjv_mouseEdit(mjModel* m, mjData* d, int select,
                         int perturb, const mjtNum* refpos, const mjtNum* refquat);


// make list of abstract geoms in mjvObjects
MJAPI void mjv_makeGeoms(const mjModel* m, mjData* d, mjvObjects* obj,
                         const mjvOption* vopt, int catmask, int select, 
                         const mjtNum* refpos, const mjtNum* refquat, const mjtNum* localpos);


// make list of abstract lights in mjvObjects
MJAPI void mjv_makeLights(const mjModel* m, mjData* d, mjvObjects* obj);



//---------------------- OpenGL rendering: 3D -------------------------------------------

// text overlay
MJAPI void mjr_overlay(mjrRect viewport, mjtGridPos gridpos, int big,
                       const char* overlay, const char* overlay2, const mjrContext* con);


// draw rectangle
MJAPI void mjr_rectangle(int flg_init2d, mjrRect viewport,
                         double left, double bottom, double rwidth, double rheight,
                         double r, double g, double b, double a);


// call glFinish
MJAPI void mjr_finish(void);


// render text (normal or big)
MJAPI void mjr_text(const char* txt, const mjrContext* con, int big,
                    float x, float y, float z, float r, float g, float b);


// render text with background clear (always normal)
MJAPI void mjr_textback(const char* txt, const mjrContext* con,
                        float x, float y, float z, float r, float g, float b);


// compute text width (normal or big)
MJAPI int mjr_textWidth(const char* txt, const mjrContext* con, int big);


// set default mjrOption
MJAPI void mjr_defaultOption(mjrOption* ropt);


// set default mjrContext
MJAPI void mjr_defaultContext(mjrContext* con);


// (re) upload texture to GPU: both 2d and cube versions (if size if valid for cube)
MJAPI void mjr_uploadTexture(const mjModel* m, const mjrContext* con, int texid);


// allocate resources in custom OpenGL context; fontscale = 100, 150, 200 (%)
MJAPI void mjr_makeContext(const mjModel* m, mjrContext* con, int fontscale);


// free resources in custom OpenGL context
MJAPI void mjr_freeContext(mjrContext* con);


// 3D rendering
MJAPI void mjr_render(int flg_offscreen, mjrRect viewport, mjvObjects* obj,
                      const mjrOption* ropt, mjvCameraPose* campose, const mjrContext* con);